--- a/ppelourd/ppelourd.csproj
+++ b/ppelourd/ppelourd.csproj
@@ -51,6 +51,12 @@
     <Reference Include="MySql.Data, Version=8.0.23.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <HintPath>..\packages\MySql.Data.8.0.23\lib\net452\MySql.Data.dll</HintPath>
     </Reference>
+    <Reference Include="PdfSharp, Version=1.50.5147.0, Culture=neutral, PublicKeyToken=f94615aa0424f9eb, processorArchitecture=MSIL">
+      <HintPath>..\packages\PDFsharp.1.50.5147\lib\net20\PdfSharp.dll</HintPath>
+    </Reference>
+    <Reference Include="PdfSharp.Charting, Version=1.50.5147.0, Culture=neutral, PublicKeyToken=f94615aa0424f9eb, processorArchitecture=MSIL">
+      <HintPath>..\packages\PDFsharp.1.50.5147\lib\net20\PdfSharp.Charting.dll</HintPath>
+    </Reference>
     <Reference Include="Renci.SshNet, Version=2020.0.0.0, Culture=neutral, PublicKeyToken=1cee9f8bde3db106, processorArchitecture=MSIL">
       <HintPath>..\packages\SSH.NET.2020.0.0\lib\net40\Renci.SshNet.dll</HintPath>
     </Reference>
@@ -98,7 +104,11 @@
     <Compile Include="admin.Designer.cs">
       <DependentUpon>admin.cs</DependentUpon>
     </Compile>
-    <Compile Include="DataBaseInfo.cs" />
+    <Compile Include="Buy.cs" />
+    <Compile Include="Categorie.cs" />
+    <Compile Include="Commande.cs" />
+    <Compile Include="DataBaseUtil.cs" />
+    <Compile Include="Image.cs" />
     <Compile Include="inscriptionClient.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -117,6 +127,7 @@
     <Compile Include="InsertProduit.Designer.cs">
       <DependentUpon>InsertProduit.cs</DependentUpon>
     </Compile>
+    <Compile Include="Journal.cs" />
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -131,16 +142,11 @@
     </Compile>
     <Compile Include="Client.cs" />
     <Compile Include="Produit.cs" />
+    <Compile Include="ProduitToPDF.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Salon.cs" />
     <Compile Include="SHA.cs" />
-    <Compile Include="UpdateParticipant.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="UpdateParticipant.Designer.cs">
-      <DependentUpon>UpdateParticipant.cs</DependentUpon>
-    </Compile>
     <Compile Include="User.cs" />
     <EmbeddedResource Include="admin.resx">
       <DependentUpon>admin.cs</DependentUpon>
@@ -169,9 +175,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="UpdateParticipant.resx">
-      <DependentUpon>UpdateParticipant.cs</DependentUpon>
-    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
